Fix preload path for portrait img, add contrast to font colors, lazy-load imgs where reasonable

--- a/src/utilities/_constants.scss
+++ b/src/utilities/_constants.scss
@@ -2,6 +2,6 @@ $body-background-color: #2B2A33;
 $header-footer-background-color: #42414D;
 $font-color: #CCCCCC;
 $selected-font-color: #6E7681;
-$link-font-color: #5E9EFF;
-$hover-link-font-color: #42B983;
-$visited-link-font-color: #8C64FF;
+$link-font-color: white;
+$hover-link-font-color: lightslategray;
+$visited-link-font-color: silver;
